2010-09-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Document pcl:fit-to-page define.

	* coders/pcl.c: Fix issue with printing a bi-level image on
	Konica-Minolta printers.  Define pcl:fit-to-page in order for the
	printer to scale the image to fit the page.  Patch by John
	Sergeant.

2010-09-19  Glenn Randers-Pehrson  <glennrp@simple...>

	* coders/png.c: removed an apparently harmless extra invocation
	of ScaleShortToQuantum() due to cut-and-paste error in the
	update of 2010-06-02.  Also added a line to explicitly set
	the opacity of the background_color to OpaqueOpacity.

2010-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdf.c (ReadPDFImage): Enable use of PDF crop box via
	-define pdf:use-cropbox=true. Patch contributed by Chris Gilling.
	SourceForge patch ID 3063794, "Add support for using crop box for
	pdf import".

2010-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Image.cpp (backgroundColor, borderColor, matteColor):
	Opacity part of user-specified color needs to be preserved.
	Problem was reported by Alexander Zheltov.

2010-09-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am: Applied Automake 1.11.1 patch by Ralf Wildenhues
	which is necessary for the test suite to pass under Windows/MinGW
	due to command line length limits.

2010-09-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/draw.c, wand/drawing_wand.c: Pass full user-provided
	double precision resolution to renderer.  Truncating the
	resolution causes problems in some cases.  Resolves SourceForge
	bug 3058387 "Incorrect Copy Compositing through C interface".

2010-09-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (StringToList): Fix performance problem caused
	by using strlcpy.

	* coders/pnm.c (ReadPNMImage): Q8 build should be able to read
	16-bit PGM images.

2010-09-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
