@@ -1,3 +1,8 @@
+2010-11-04  Glenn Randers-Pehrson  <glennrp@simple...>
+
+	* magick/effect.c: Added 5x5, 6x6, and 7x7 circular ordered dither
+	  patterns to create a halftone effect.
+
 2010-09-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* doc/options.imdoc: Document pcl:fit-to-page define.
